--- a/home.html
+++ b/home.html
@@ -189,6 +189,7 @@
         <div class="home-arguments-decoration-circle-3">
           <div class="home-arguments-decoration-star-4"></div>
           <div class="home-arguments-decoration-star-5"></div>
+          <div class="home-arguments-decoration-star-6"></div>
         </div>
       </div>
     </section>
@@ -211,60 +212,54 @@
             <div class="p-app-logo icon-wp-p-logo"></div>
           </div>
           <div class="home-bank-logo-illustration-container">
-            <div class="bank-logo-row">
-              <div class="bank-logo-grid-1">
-                <div class="bank-logo-medium">
-                  <img src="img/bank-logos/credit-foncier.png">
-                </div>
-              </div>
-              <div class="bank-logo-grid-2">
-                <div class="bank-logo-large">
-                  <img src="img/bank-logos/bred.png">
-                </div>
+            <div class="bank-logo-grid-1">
+              <div class="bank-logo-medium">
+                <img src="img/bank-logos/credit-foncier.png">
               </div>
             </div>
-            <div class="bank-logo-row">
-              <div class="bank-logo-grid-3">
-                <div class="bank-logo-medium">
-                  <img src="img/bank-logos/bred-espace.png">
-                </div>
-              </div>
-              <div class="bank-logo-grid-4">
-                <div class="bank-logo-large">
-                  <img src="img/bank-logos/ca-2.png">
-                </div>
-              </div>
-              <div class="bank-logo-grid-5">
-                <div class="bank-logo-medium">
-                  <img src="img/bank-logos/lcl.png">
-                </div>
-              </div>
-              <div class="bank-logo-grid-6">
-                <div class="bank-logo-large">
-                  <img src="img/bank-logos/caisse-epargne.png">
-                </div>
+            <div class="bank-logo-grid-2">
+              <div class="bank-logo-large">
+                <img src="img/bank-logos/bred.png">
               </div>
             </div>
-            <div class="bank-logo-row">
-              <div class="bank-logo-grid-7">
-                <div class="bank-logo-large">
-                  <img src="img/bank-logos/bnp.png">
-                </div>
+            <div class="bank-logo-grid-3">
+              <div class="bank-logo-medium">
+                <img src="img/bank-logos/bred-espace.png">
               </div>
-              <div class="bank-logo-grid-8">
-                <div class="bank-logo-small">
-                  <img src="img/bank-logos/hsbc.png">
-                </div>
+            </div>
+            <div class="bank-logo-grid-4">
+              <div class="bank-logo-large">
+                <img src="img/bank-logos/ca-2.png">
               </div>
-              <div class="bank-logo-grid-9">
-                <div class="bank-logo-large">
-                  <img src="img/bank-logos/credit-du-nord.png">
-                </div>
+            </div>
+            <div class="bank-logo-grid-5">
+              <div class="bank-logo-medium">
+                <img src="img/bank-logos/lcl.png">
               </div>
-              <div class="bank-logo-grid-10">
-                <div class="bank-logo-small">
-                  <img src="img/bank-logos/socgen.png">
-                </div>
+            </div>
+            <div class="bank-logo-grid-6">
+              <div class="bank-logo-large">
+                <img src="img/bank-logos/caisse-epargne.png">
+              </div>
+            </div>
+            <div class="bank-logo-grid-7">
+              <div class="bank-logo-large">
+                <img src="img/bank-logos/bnp.png">
+              </div>
+            </div>
+            <div class="bank-logo-grid-8">
+              <div class="bank-logo-small">
+                <img src="img/bank-logos/hsbc.png">
+              </div>
+            </div>
+            <div class="bank-logo-grid-9">
+              <div class="bank-logo-large">
+                <img src="img/bank-logos/credit-du-nord.png">
+              </div>
+            </div>
+            <div class="bank-logo-grid-10">
+              <div class="bank-logo-small">
+                <img src="img/bank-logos/socgen.png">
               </div>
             </div>
           </div>
