[feat] add testimonie slider

--- a/home.html
+++ b/home.html
@@ -3,6 +3,10 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:500,600,700" rel="stylesheet">
     <link href="css/theme.css" media="screen" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/lib/jquery.bxslider.min.js"></script>
+    <link href="/lib/jquery.bxslider.css" rel="stylesheet">
+    <script src="js/slider-min.js"></script>
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
   </head>
   <body>
@@ -273,15 +277,15 @@
             Nos clients témoignent
           </h2>
         </div>
-        <div class="home-testimonie-container">
-          <div class="home-testimonie-container-card">
+        <ul class="home-testimonie-container">
+          <li class="home-testimonie-container-card">
             <div class="home-testimonie-card card-shadow">
               <div class="home-testimonie-card-quote">
                 <span class="icon-wp-quote"></span>
               </div>
               <div class="home-testimonie-card-content">
                 <p>
-                  Julien a été excellent et nous a obtenu un taux magique.
+                  0 - Julien a été excellent et nous a obtenu un taux magique.
                   Bravo Pretto !
                 </p>
                 <div class="home-testimonie-card-content-note">
@@ -292,8 +296,103 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
+          </li>
+          <li class="home-testimonie-container-card">
+            <div class="home-testimonie-card card-shadow">
+              <div class="home-testimonie-card-quote">
+                <span class="icon-wp-quote"></span>
+              </div>
+              <div class="home-testimonie-card-content">
+                <p>
+                  1 - Julien a été excellent et nous a obtenu un taux magique.
+                  Bravo Pretto !
+                </p>
+                <div class="home-testimonie-card-content-note">
+                  <span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span>
+                </div>
+                <div class="home-testimonie-card-content-name">
+                  <strong>Odile Deraye, Meudon</strong>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="home-testimonie-container-card">
+            <div class="home-testimonie-card card-shadow">
+              <div class="home-testimonie-card-quote">
+                <span class="icon-wp-quote"></span>
+              </div>
+              <div class="home-testimonie-card-content">
+                <p>
+                  2 - Julien a été excellent et nous a obtenu un taux magique.
+                  Bravo Pretto !
+                </p>
+                <div class="home-testimonie-card-content-note">
+                  <span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span>
+                </div>
+                <div class="home-testimonie-card-content-name">
+                  <strong>Odile Deraye, Meudon</strong>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="home-testimonie-container-card">
+            <div class="home-testimonie-card card-shadow">
+              <div class="home-testimonie-card-quote">
+                <span class="icon-wp-quote"></span>
+              </div>
+              <div class="home-testimonie-card-content">
+                <p>
+                  3 - Julien a été excellent et nous a obtenu un taux magique.
+                  Bravo Pretto !
+                </p>
+                <div class="home-testimonie-card-content-note">
+                  <span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span>
+                </div>
+                <div class="home-testimonie-card-content-name">
+                  <strong>Odile Deraye, Meudon</strong>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="home-testimonie-container-card">
+            <div class="home-testimonie-card card-shadow">
+              <div class="home-testimonie-card-quote">
+                <span class="icon-wp-quote"></span>
+              </div>
+              <div class="home-testimonie-card-content">
+                <p>
+                  4 - Julien a été excellent et nous a obtenu un taux magique.
+                  Bravo Pretto !
+                </p>
+                <div class="home-testimonie-card-content-note">
+                  <span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span>
+                </div>
+                <div class="home-testimonie-card-content-name">
+                  <strong>Odile Deraye, Meudon</strong>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="home-testimonie-container-card">
+            <div class="home-testimonie-card card-shadow">
+              <div class="home-testimonie-card-quote">
+                <span class="icon-wp-quote"></span>
+              </div>
+              <div class="home-testimonie-card-content">
+                <p>
+                  5 - Julien a été excellent et nous a obtenu un taux magique.
+                  Bravo Pretto !
+                </p>
+                <div class="home-testimonie-card-content-note">
+                  <span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span><span class="icon-trustpilot-star icon-wp-star"></span>
+                </div>
+                <div class="home-testimonie-card-content-name">
+                  <strong>Odile Deraye, Meudon</strong>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="home-how-it-work">
