--- a/home.html
+++ b/home.html
@@ -7,10 +7,11 @@
     <script src="/lib/jquery.bxslider.min.js"></script>
     <link href="/lib/jquery.bxslider.css" rel="stylesheet">
     <script src="js/slider-min.js"></script>
+    <script src="js/header-min.js"></script>
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
   </head>
   <body>
-    <header>
+    <header class="primary-header header-visible">
       <div class="row-center row-padding">
         <a class="header-logo" href=""></a>
         <ul class="header-menu">
@@ -42,6 +43,7 @@
         <div class="header-button-menu-mobile"></div>
       </div>
     </header>
+    <header class="secondary-header"></header>
     <section class="home-hero">
       <div class="row-center row-padding">
         <h1 class="heading-large home-hero-heading text-center">
