style for testimonies

--- a/home.html
+++ b/home.html
@@ -4,8 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:500,600,700" rel="stylesheet">
     <link href="css/theme.css" media="screen" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/lib/jquery.bxslider.min.js"></script>
-    <link href="/lib/jquery.bxslider.css" rel="stylesheet">
+    <script src="/js/jquery.bxslider.min.js"></script>
     <script src="js/slider-min.js"></script>
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
   </head>
